Fix word wrap

--- a/akl-app/src/main/scss/_groups.scss
+++ b/akl-app/src/main/scss/_groups.scss
@@ -27,6 +27,7 @@
   min-height: 100px;
   & > div {
     display: block;
+    white-space: nowrap;
     float: left;
     clear: left;
     cursor: move;
